--- a/client/index.css
+++ b/client/index.css
@@ -6,6 +6,16 @@ body {
     background-image: url("./img/fondo.png");
 }
 
+.welcome__main-div-container,
+.new-room__main-div-container,
+.access-room__main-div-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 100vh;
+}
+
 .welcome__title-container,
 .new-room__title-container,
 .access-room__title-container {
@@ -35,13 +45,10 @@ body {
 .new-room__plays-container,
 .waiting__plays-container,
 .ready__plays-container {
-    display: grid;
-    gap: 46px;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
     width: 273px;
-    position: fixed;
-    top: 85%;
-    left: 19vw;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 @media (min-width: 900px) {
     .welcome__plays-container,
@@ -50,7 +57,6 @@ body {
     .new-room__plays-container,
     .waiting__plays-container,
     .ready__plays-container {
-        left: 35vw;
     }
 }
 .welcome__play,
